added meta tags to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="An engraving simulator for the game Lost Ark." />
+  <title>Lost Ark Engraving Simulator</title>
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ja-me-ch.github.io/Lost-Ark-Engraving-Simulator-React-/" />
+  <meta property="og:title" content="Lost Ark Engraving Simulator" />
+  <meta property="og:description" content="An engraving simulator for the game Lost Ark." />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +25,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Lost Ark | Engraving Simulator</title>
 </head>
 
 <body>
